fixed category api
